<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginlayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="171dp"
            android:layout_marginLeft="171dp"
            android:layout_marginBottom="7dp"
            android:text="@string/app_name"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/appimage"
            android:layout_width="194dp"
            android:layout_height="87dp"
            android:layout_above="@+id/app_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="104dp"
            android:layout_marginLeft="104dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="114dp"
            android:layout_marginRight="114dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:id="@+id/loginlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="145dp"
            android:padding="15dip">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:background="@android:drawable/edit_text"
                android:drawableLeft="@drawable/log"
                android:hint="@string/euser"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user"
                android:text="@string/pwd"
                android:textSize="20dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_marginTop="2dp"
                android:background="@android:drawable/edit_text"
                android:drawableLeft="@drawable/pwd"
                android:hint="@string/epwd"
                android:inputType="textPassword"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pwd"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/log"
                    android:textSize="20dp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/reg"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>