<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/regbackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="335dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="169dp"
            android:layout_marginLeft="169dp"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/appimage"
            android:layout_width="224dp"
            android:layout_height="163dp"
            android:layout_above="@+id/app_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="97dp"
            android:layout_marginRight="97dp"
            android:layout_marginBottom="-3dp"
            android:src="@drawable/reglogo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="162dp">

        <TextView
            android:id="@+id/regusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reguser"
            android:layout_width="fill_parent"
            android:layout_height='wrap_content'
            android:layout_below="@+id/regusername"
            android:background="@android:drawable/edit_text"
            android:drawableLeft="@drawable/log"
            android:hint="@string/euser"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/regpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reguser"
            android:text="@string/pwd"
            android:textSize="20dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/regpwd"
            android:layout_width="fill_parent"
            android:layout_height='wrap_content'
            android:layout_below="@+id/regpassword"
            android:background="@android:drawable/edit_text"
            android:drawableLeft="@drawable/log"
            android:hint="@string/pwd"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="20dp" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pwd"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/ok"
            android:textSize="20dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/cancel"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>